k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: astra

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend

          image: astraacademyacr.azurecr.io/astra-backend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 5000
