k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: astra

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: astraacademyacr.azurecr.io/astra-frontend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 3000
