k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: astra

spec:
  selector:
    app: frontend

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
